--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: env  # Specify the environment name
 
     steps:
       - name: Checkout code
@@ -22,7 +23,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install awscli
+
+      - name: Install AWS CLI v2
+        run: |
+          curl "https://awscli.amazonaws.com/AWSCLIV2.pkg" -o "AWSCLIV2.pkg"
+          sudo installer -pkg AWSCLIV2.pkg -target /
 
       - name: Package application
         run: |
@@ -33,12 +38,11 @@ jobs:
 
       - name: Deploy to AWS Lambda
         env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}  # Accessing secrets from environment
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}  # Accessing secrets from environment
+          AWS_DEFAULT_REGION: us-east-1
         run: |
           aws lambda update-function-code \
             --function-name arn:aws:lambda:us-east-1:226401266262:function:testapi \
-            --zip-file fileb://deploy.zip \
-            --region us-east-1
-
+            --zip-file fileb://deploy.zip
 
