--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,62 @@
-name: CI/CD
+name: FastAPI CI/CD
 
 on:
-  #Trigger workflow on push
+  # Trigger the workflow on push
   push:
-    branches:
-      - main
+    branches: 
+      # Push events on main branch
+      - main 
 
+# The Job defines a series of steps that execute on the same runner.
 jobs:
 
   CI:
+    # Define the runner used in the workflow
     runs-on: ubuntu-latest
-    steps:
+    steps:   
+      # Check out repo so our workflow can access it
       - uses: actions/checkout@v2
-
-      - name: Setup Python
+      
+      # Step-1 Setup Python
+      - name: Set up Python
+        # This action sets up a Python environment for use in actions
         uses: actions/setup-python@v2
         with:
-          python-version: 3.12
+          python-version: 3.7
+          # optional: architecture: x64 x64 or x86. Defaults to x64 if not specified
 
-      - name: Instal Python Virtual Env
+      # Step-2 Install Python Virtual ENV
+      - name: Install Python Virtual ENV
         run: pip3 install virtualenv
 
-      - name: Virutal ENV
+      # Step-3 Setup Virtual ENV
+      # https://docs.github.com/en/actions/guides/caching-dependencies-to-speed-up-workflows
+      - name:  Virtual ENV
         uses: actions/cache@v2
-        id: cache-vevn
+        id: cache-venv # name for referring later
         with:
-          path: venv
-          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: /
+          path: venv # what we cache: the Virtual ENV
+          # The cache key depends on requirements.txt
+          key: ${{ runner.os }}-venv-${{ hashFiles('**/requirements*.txt') }}
+          restore-keys: |
             ${{ runner.os }}-venv-
-      
-      - name: Activate Virutal ENV
-        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
 
+      # Step-4 Build a Virtual ENV, but only if it doesn't already exist
+      - name: Activate Virtual ENV
+        run: python -m venv venv && source venv/bin/activate && pip3 install -r requirements.txt
+        if: steps.cache-venv.outputs.cache-hit != 'true'
+
+      - name: Run Tests   
+        # Note that you have to activate the virtualenv in every step
+        # because GitHub actions doesn't preserve the environment   
+        run: . venv/bin/activate && pytest
       - name: Create archive of dependencies
         run: |
-          cd ./venv/lib/python3.12/site-packages
-          zip -r9 ../../../../api.zip
-      - name: Add API Files to zip file
+          cd ./venv/lib/python3.7/site-packages
+          zip -r9 ../../../../api.zip .
+      - name: Add API files to Zip file
         run: cd ./api && zip -g ../api.zip -r .
-      - name: Upload zipfile artifact
+      - name: Upload zip file artifact
         uses: actions/upload-artifact@v2
         with:
           name: api
